--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, my name is Vincent and I'm a nice guy who likes playing video games and my electric guitar.</p>
+          <p>Hi, I'm Vincent and I'm a nice guy who likes coding, playing video games, and electric guitar.</p>
         </div>
 
         <div class="row">
@@ -630,13 +630,17 @@
               </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
+                <a href = "mailto:vincenttpham@gmail.com">
+                  <i class="bi bi-envelope"></i>
+                </a>
                 <h4>Email:</h4>
                 <p>vincenttpham@gmail.com</p>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
+                <a href="tel:+1714-552-4769">
+                  <i class="bi bi-phone"></i>
+                </a>
                 <h4>Call:</h4>
                 <p>+1 714 552 4769</p>
               </div>
