--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <a href="http://www.aunexusa.com/" target="_blank">
+            <a href="/" target="_blank">
               <div class="portfolio-wrap">
               
                 <img src="assets/img/portfolio/aunex.jpg" class="img-fluid" alt="">
