--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, I'm Vincent and I'm a nice guy who likes coding, playing video games, and electric guitar.</p>
+          <p>Hi, I'm Vincent and I'm a nice guy who loves coding, playing video games, and electric guitar.</p>
         </div>
 
         <div class="row">
