--- a/portfolio-details-dekage.html
+++ b/portfolio-details-dekage.html
@@ -64,16 +64,16 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="index.html#hero" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <!--
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           -->
-          <li><a href="#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="index.html#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <!--
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           -->
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -88,7 +88,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Project Details</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
             <li>Project Details</li>
           </ol>
         </div>
@@ -107,15 +107,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/aunex.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-dekage1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-dekage2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-dekage3.png" alt="">
                 </div>
 
               </div>
@@ -127,16 +127,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web dev</li>
-                <li><strong>Client</strong>: Aunex Inc.</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://iirqwj2lhk.execute-api.us-east-1.amazonaws.com/dev/">Aunex</a></li>
+                <li><strong>Company</strong>: Dekage LLC</li>
+                <li><strong>Date</strong>: February 2021</li>
+                <li><strong>URL</strong>: <a href="https://www.dekageshop.com/" target="_blank">dekageshop</a></li>
+                <li><strong>Repo</strong>: <a href="https://github.com/vincenttpham/dekage" target="_blank">GitHub</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>dekageshop</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Dekage LLC/dekageshop is an e-commerce business/website made with the intent to manufacture and sell K-pop themed stickers online, founded and created by me and two friends. One friend made stickers recreationally, the other did online marketing, and I developed websites. We thought it was a genius idea to try and capitalize on obsessive fans with a great cost-to-sell ratio product. After launching however, we ran into manufacturing issues that were overlooked and stopped production.
               </p>
             </div>
           </div>
