--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-full-stack">
-            <a href="https://iirqwj2lhk.execute-api.us-east-1.amazonaws.com/dev/" target="_blank">
+            <a href="portfolio-details-aunex.html">
               <div class="portfolio-wrap">
               
                 <img src="assets/img/portfolio/aunex.jpg" class="img-fluid" alt="">
@@ -355,7 +355,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-full-stack">
-            <a href="https://www.dekageshop.com/" target="_blank">
+            <a href="portfolio-details-dekage.html">
               <div class="portfolio-wrap">
               
                 <img src="assets/img/portfolio/dekage.png" class="img-fluid" alt="">
