--- a/portfolio-details-dekage.html
+++ b/portfolio-details-dekage.html
@@ -136,7 +136,7 @@
             <div class="portfolio-description">
               <h2>dekageshop</h2>
               <p>
-                Dekage LLC/dekageshop is an e-commerce business/website made with the intent to manufacture and sell K-pop themed stickers online, founded and created by me and two friends. One friend made stickers recreationally, the other did online marketing, and I developed websites. We thought it was a genius idea to try and capitalize on obsessive fans with a great cost-to-sell ratio product. After launching however, we ran into manufacturing issues that were overlooked and stopped production.
+                Dekage LLC/dekageshop is an e-commerce business/website made with the intent to manufacture and sell K-pop themed stickers online, founded and created by me and two friends. One friend made stickers recreationally, the other did online marketing, and I developed websites. We thought it was a genius idea to try and capitalize on obsessive fans with a great cost-to-sell ratio product. We eventually ran into manufacturing issues and stopped production, but the website remains live.
               </p>
             </div>
           </div>
