--- a/portfolio-details-aunex.html
+++ b/portfolio-details-aunex.html
@@ -136,7 +136,7 @@
             <div class="portfolio-description">
               <h2>Aunex Inc.</h2>
               <p>
-                Aunex Inc. was a start-up that manufactured and sold car audio parts at over 200 vendors across the US and some parts of Mexico. Despite being well known in the car audio industry, their online presence was still in its early stages, so they brought me in to turn their static company site into a dynamic Django web app to implement QOL features for office staff (account systems, file uploads/automation, dealer locator, etc...) with future e-commerce plans as well. Tragically, the company was shut down after founder and CEO, Steven Bach, passed away to COVID-19. The site is now hosted serverless on AWS Lambda and S3 for portfolio purposes.
+                Aunex Inc. was a start-up that manufactured and sold car audio parts at over 200 vendors across the US and some parts of Mexico. Despite being well known in the car audio industry, their online presence was still in its early stages, so they brought me in to turn their static company site into a dynamic Django web app to implement QoL features for office staff (account systems, file uploads/automation, dealer locator, etc...) with future e-commerce plans as well. Tragically, the company was shut down after founder and CEO, Steven Bach, passed away to COVID-19. The site is now hosted serverless on AWS Lambda and S3 for portfolio purposes.
               </p>
             </div>
           </div>
