--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 August 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>August 22, 1995</span></li>
                   <!--
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                   -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+714 552 4769</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 714 552 4769</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Westminster, CA</span></li>
                 </ul>
               </div>
