--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-creative">
-            <a href="https://www.youtube.com/watch?v=NpWHUddBuiI" target="_blank">
+            <a href="portfolio-details-ev.html">
               <div class="portfolio-wrap">
               
                 <img src="assets/img/portfolio/evamelie.webp" class="img-fluid" alt="">
