--- a/index.html
+++ b/index.html
@@ -373,19 +373,10 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-front-end">
-            <a href="https://vincenttpham.github.io/iron_grind/" target="_blank">
+            <a href="portfolio-details-iron-grind.html">
               <div class="portfolio-wrap">
               
                 <img src="assets/img/portfolio/iron_grind.jpg" class="img-fluid" alt="">
-              </div>
-            </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-front-end">
-            <a href="https://vincenttpham.github.io/herban_delivery/" target="_blank">
-              <div class="portfolio-wrap">
-              
-                <img src="assets/img/portfolio/herban_delivery.png" class="img-fluid" alt="">
               </div>
             </a>
           </div>
