--- a/portfolio-details-iron-grind.html
+++ b/portfolio-details-iron-grind.html
@@ -130,7 +130,7 @@
                 <li><strong>Company</strong>: Mike Glass</li>
                 <li><strong>Date</strong>: February 2020</li>
                 <li><strong>URL</strong>: <a href="https://vincenttpham.github.io/iron_grind/" target="_blank">Iron Grind</a></li>
-                <li><strong>Repo</strong>: <a href="https://github.com/vincenttpham/iron_grind" target="_blank"></a>GitHub</li>
+                <li><strong>Repo</strong>: <a href="https://github.com/vincenttpham/iron_grind" target="_blank">GitHub</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
