--- a/index.html
+++ b/index.html
@@ -373,6 +373,15 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-front-end">
+            <a href="portfolio-details-herban-delivery.html">
+              <div class="portfolio-wrap">
+              
+                <img src="assets/img/portfolio/herban_delivery.png" class="img-fluid" alt="">
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-front-end">
             <a href="portfolio-details-iron-grind.html">
               <div class="portfolio-wrap">
               
