virtual assistant update

--- a/index.html
+++ b/index.html
@@ -346,6 +346,15 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-full-stack">
+            <a href="portfolio-details-virtual-assistant.html">
+              <div class="portfolio-wrap">
+              
+                <img src="https://cdn10.bigcommerce.com/s-yhxhf/products/5881/images/10861/15MV081__73903.1429922981.600.600.png?c=2" class="img-fluid" alt="">
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-full-stack">
             <a href="portfolio-details-aunex.html">
               <div class="portfolio-wrap">
               
