virtual assistant swiper update

--- a/portfolio-details-virtual-assistant.html
+++ b/portfolio-details-virtual-assistant.html
@@ -110,12 +110,12 @@
                   <img src="assets/img/portfolio/portfolio-details-virtual-assistant1.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-virtual-assistant2.png" alt="">
+                <div class="swiper-slide d-flex justify-content-center">
+                  <img src="assets/img/portfolio/portfolio-details-virtual-assistant2.png" alt="" class="w-25">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-virtual-assistant3.png" alt="">
+                <div class="swiper-slide d-flex justify-content-center">
+                  <img src="assets/img/portfolio/portfolio-details-virtual-assistant3.png" alt="" class="w-25">
                 </div>
 
               </div>
