--- a/portfolio-details-virtual-assistant.html
+++ b/portfolio-details-virtual-assistant.html
@@ -136,7 +136,7 @@
             <div class="portfolio-description">
               <h2>Virtual Assistant</h2>
               <p>
-                Virtual Assistant is an app powered by OpenAI API that can answer your questions, read csv files, generate personalized email sequences, and more.
+                Virtual Assistant is an app powered by OpenAI API that can answer your questions, read CSV files, generate personalized email sequences, and more.
               </p>
             </div>
           </div>
