virtual assistant link update

--- a/portfolio-details-virtual-assistant.html
+++ b/portfolio-details-virtual-assistant.html
@@ -129,7 +129,7 @@
               <ul>
                 <li><strong>Company</strong>: N/A</li>
                 <li><strong>Date</strong>: September 2023</li>
-                <li><strong>URL</strong>: <a href="https://mpp0e09aqi.execute-api.us-east-1.amazonaws.com/dev" target="_blank">Virtual Assistant</a></li>
+                <li><strong>URL</strong>: <a href="https://37h305jn8k.execute-api.us-east-1.amazonaws.com/dev" target="_blank">Virtual Assistant</a></li>
                 <li><strong>Repo</strong>: <a href="https://github.com/vincenttpham/virtual_assistant" target="_blank">GitHub</a></li>
               </ul>
             </div>
