va description update

--- a/portfolio-details-virtual-assistant.html
+++ b/portfolio-details-virtual-assistant.html
@@ -136,7 +136,7 @@
             <div class="portfolio-description">
               <h2>Virtual Assistant</h2>
               <p>
-                Virtual Assistant is an app powered by OpenAI API that can answer your questions, read CSV files, send personalized emails (from my email address), and more!
+                Virtual Assistant is a Python app powered by OpenAI API that can answer your questions, read CSV files, generate images, send personalized emails (from my email address), and more!
               </p>
             </div>
           </div>
